Fixed projects section to work on smaller devices

--- a/src/Project.css
+++ b/src/Project.css
@@ -13,29 +13,35 @@
 }
 
 #ProjectLink{
-    position: absolute;
+    display: block;
+    position: relative;
     color: white;
     font-family: "Patua One";
     font-size: 20px;
-    margin-left:150px;
-    left:10px;
-    margin-top:120px;
+    margin-left:10px;
+    margin-top:5px;
+    margin-bottom:10px;
+}
+
+#link{
+    margin-bottom:0px;
 }
 
 #ProjectImage{
     float: left;
-    display: inline-block;
-    padding: 0px;
-    margin:0px;
 }
+
 
 #ProjectTitle{
     display: inline-block;
     margin-left:10px;
+    margin-right: 5px;
     font-size: 30px;
     font-family: "Patua One";
     color:white;
     text-shadow: 2px 2px grey;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 #ProjectTechnologies{
@@ -45,6 +51,11 @@
     color:white;
     font-family: "Patua One";
     text-shadow: 1px 1px grey;
+    padding:0px;
+}
+
+#tech{
+    margin-bottom: 0px;
 }
 
 #ProjectDescription{
@@ -56,9 +67,12 @@
     text-shadow: 0.5px 0.5px grey;
 }
 
+#descr{
+    margin-bottom:0px;
+}
+
 #wrapper{
     display: inline-block;
     width: 83%;
     min-height:150px;
-    float:left;
 }
